Matched navigation indicator color to theme

--- a/theme-wpblue/style.css
+++ b/theme-wpblue/style.css
@@ -796,7 +796,7 @@ color: #eff0f1;
   height: 3px;
   -webkit-border-radius: 2px;
   border-radius: 2px;
-  background: #2badad;
+  background: #6ABCDD;
 }
 code .string,
 code .number {
