Remove / between site.url and additional file or directory paths.

--- a/_layouts/internals.html
+++ b/_layouts/internals.html
@@ -13,11 +13,11 @@ title: WP REST API Documentation
   <!-- Flatdoc -->
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 
-  <link rel="stylesheet" href="{{ site.baseurl }}/stylesheets/styles.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}/stylesheets/pygment_trac.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}stylesheets/styles.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}stylesheets/pygment_trac.css">
 
   <script src="http://rstacruz.github.io/flatdoc/v/0.8.0/theme-white/script.js"></script>
-  <script src="{{ site.baseurl }}/js/sidebar.js"></script>
+  <script src="{{ site.baseurl }}js/sidebar.js"></script>
 
   <!-- Meta -->
   <meta content="WP API" property="og:title">
