--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,14 +3,14 @@
 <div class="header">
   <div class="left">
 
-    <h1><a href="{{ site.baseurl }}/">WP REST API</a></h1>
+    <h1><a href="{{ site.baseurl }}">WP REST API</a></h1>
     <ul>
-      <li><a href="{{ site.baseurl }}/">WP REST API</a></li>
+      <li><a href="{{ site.baseurl }}">WP REST API</a></li>
       <li><a href="https://github.com/WP-API/WP-API">Source on GitHub</a></li>
       <li><a href="https://github.com/WP-API/WP-API/issues">Issues</a></li>
-      <li><a href="{{ site.baseurl }}/guides.html">Guides</a></li>
-      <li><a href="{{ site.baseurl }}/internals.html">Internals</a></li>
-      <li><a href="{{ site.baseurl }}/misc.html">Misc</a></li>
+      <li><a href="{{ site.baseurl }}guides.html">Guides</a></li>
+      <li><a href="{{ site.baseurl }}internals.html">Internals</a></li>
+      <li><a href="{{ site.baseurl }}misc.html">Misc</a></li>
     </ul>
   </div>
   <div class="right">
