Added resources to navigation

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,6 +10,7 @@
       <li><a href="https://github.com/WP-API/WP-API/issues">Issues</a></li>
       <li><a href="{{ site.baseurl }}guides.html">Guides</a></li>
       <li><a href="{{ site.baseurl }}internals.html">Internals</a></li>
+      <li><a href="{{ site.baseurl }}resources.html">Resources</a></li>
       <li><a href="{{ site.baseurl }}misc.html">Misc</a></li>
     </ul>
   </div>
