Switch to the rawgithub CDN for hotlinking the Flatdoc JS files.

--- a/_layouts/internals.html
+++ b/_layouts/internals.html
@@ -16,7 +16,7 @@ title: WP REST API Documentation
   <link rel="stylesheet" href="{{ site.baseurl }}stylesheets/styles.css">
   <link rel="stylesheet" href="{{ site.baseurl }}stylesheets/pygment_trac.css">
 
-  <script src="http://rstacruz.github.io/flatdoc/v/0.8.0/theme-white/script.js"></script>
+  <script src="https://cdn.rawgit.com/rstacruz/flatdoc/gh-pages/theme-white/script.js"></script>
   <script src="{{ site.baseurl }}js/sidebar.js"></script>
 
   <!-- Meta -->
