--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -837,3 +837,23 @@ code .comment {
   position: relative;
   z-index: 1;
 }
+.v2-pointer {
+  padding: 30px 40px 40px;
+  max-width: 700px;
+  font-family: Open Sans,sans-serif;
+}
+.v2-pointer p {
+  padding: 10px;
+  text-align: center;
+  // border: 3px solid #2B3D50;
+  border-radius: 6px;
+  font-size: 22px;
+}
+.v2-pointer a {
+  display: inline-block;
+  background: #008CBA;
+  color: #fff;
+  padding: 1rem 2rem 1.0625rem;
+  margin: 10px 0px 1.25rem;
+  border-radius: 3px;
+}
