--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
 <div class="header">
   <div class="left">
 
-    <h1><a href="{{ site.baseurl }}">WP REST API</a></h1>
+    <h1><a href="{{ site.baseurl }}">WP REST API (v1)</a></h1>
     <ul>
       <li><a href="{{ site.baseurl }}">WP REST API</a></li>
       <li><a href="https://github.com/WP-API/WP-API">Source on GitHub</a></li>
