Update meta description

--- a/_layouts/internals.html
+++ b/_layouts/internals.html
@@ -21,7 +21,7 @@ title: WP REST API (v1) Documentation
 
   <!-- Meta -->
   <meta content="WP API" property="og:title">
-  <meta content="Official Documentation for the WP REST API" name="description">
+  <meta content="Official Documentation for the WP REST API version 1" name="description">
 </head>
 
 {% include header.html %}
