Update meta content

--- a/_layouts/internals.html
+++ b/_layouts/internals.html
@@ -20,7 +20,7 @@ title: WP REST API (v1) Documentation
   <script src="{{ site.baseurl }}js/sidebar.js"></script>
 
   <!-- Meta -->
-  <meta content="WP API" property="og:title">
+  <meta content="WP API version 1" property="og:title">
   <meta content="Official Documentation for the WP REST API version 1" name="description">
 </head>
 
