Link to v2 in header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,6 +12,7 @@
       <li><a href="{{ site.baseurl }}internals.html">Internals</a></li>
       <li><a href="{{ site.baseurl }}resources.html">Resources</a></li>
       <li><a href="{{ site.baseurl }}misc.html">Misc</a></li>
+      <li><a class="v2-link" href="http://v2.wp-api.org/">Version 2 Documentation</a></li>
     </ul>
   </div>
   <div class="right">
